--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+
+/* ESSE ARQUIVO FOI FEITO JUNTAMENTE COM A EQUIPE DA IMERSÃO ALURA */
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -36,3 +41,10 @@ body {
 a {
   color: inherit;
 } 
+
+#root {
+min-height: calc(100vh - var(--bodyPaddingTop));
+/*height visual ==> vh*/
+display: flex;
+flex-direction: column;
+}
